5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1716_2499.log
== SUBMITION (2019-05-16 15:03:42) 
-- CODE:
from math import*
k = int(input("Digite um valor k: "))
cont = 1
result = 1
denominador = 1
While (k> cont):
	result = result + (1/factorial(denominador))
	denominador = denominador + 1
	cont = cont + 1
print (round(result, 8))
-- EXECUTION TIME:
0.139347
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 6
    While (k> cont):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:04:03) 
-- CODE:
from math import*
k = int(input("Digite um valor k: "))
cont = 1
result = 1
denominador = 1
While (k > cont):
	result = result + (1/factorial(denominador))
	denominador = denominador + 1
	cont = cont + 1
print (round(result, 8))
-- EXECUTION TIME:
0.197215
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 6
    While (k > cont):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:04:34) 
-- CODE:
from math import*
k = int(input("Digite um valor k: "))
cont = 1
result = 1
denominador = 1
While (k > cont):
	result = result + (1/factorial(denominador))
	denominador = denominador + 1
	cont = cont + 1
print (round(result,8))
-- EXECUTION TIME:
0.140312
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 6
    While (k > cont):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:06:48) 
-- CODE:
from math import *
k = int(input("Digite um valor k: "))
cont = 1
result = 1
denominador = 1
While (k > cont):
	result = result + (1/factorial(denominador))
	denominador = denominador + 1
	cont = cont + 1
print (round(result,8))
-- EXECUTION TIME:
0.142462
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 6
    While (k > cont):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:09:12) 
-- CODE:
from math import *
k = int(input("Digite um valor k: "))
cont = 1
result = 1
denominador = 1
while (k > cont):
	result = result + (1/factorial(denominador))
	denominador = denominador + 1
	cont = cont + 1
print (round(result,8))
-- EXECUTION TIME:
0.171761
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:09:18) 
-- CODE:
from math import *
k = int(input("Digite um valor k: "))
cont = 1
result = 1
denominador = 1
while (k > cont):
	result = result + (1/factorial(denominador))
	denominador = denominador + 1
	cont = cont + 1
print (round(result,8))
-- EXECUTION TIME:
0.181392
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
